--- a/nosotros.html
+++ b/nosotros.html
@@ -22,6 +22,7 @@
                 <li class="nav-item"><a href="servicio.html" class="nav-link">Servicio</a></li>
                 <li class="nav-item"><a href="portafolio.html" class="nav-link">Portafolio</a></li>
                 <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                <li class="nav-item"><a href="proContact.html" class="nav-link">Contacto Profesional</a></li>
             </ul>
         </div>
     </header>
