--- a/portafolio.html
+++ b/portafolio.html
@@ -20,9 +20,9 @@
                 <li class="nav-item "><a href="index.html" class="nav-link">Inicio</a></li>
                 <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
                 <li class="nav-item"><a href="servicio.html" class="nav-link">Servicio</a></li>
-                <li class="nav-item"><a href="portafolio.html" class="nav-link active"
-                        aria-current="page">Portafolio</a></li>
+                <li class="nav-item"><a href="portafolio.html" class="nav-link active" aria-current="page">Portafolio</a></li>
                 <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                <li class="nav-item"><a href="proContact.html" class="nav-link">Contacto Profesional</a></li>
             </ul>
         </div>
     </header>
