--- a/servicio.html
+++ b/servicio.html
@@ -19,10 +19,10 @@
             <ul class="nav nav-pills">
                 <li class="nav-item "><a href="index.html" class="nav-link">Inicio</a></li>
                 <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
-                <li class="nav-item"><a href="servicio.html" class="nav-link active" aria-current="page">Servicio</a>
-                </li>
+                <li class="nav-item"><a href="servicio.html" class="nav-link active" aria-current="page">Servicio</a></li>
                 <li class="nav-item"><a href="portafolio.html" class="nav-link">Portafolio</a></li>
                 <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                <li class="nav-item"><a href="proContact.html" class="nav-link">Contacto Profesional</a></li>
             </ul>
         </div>
     </header>
